force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/cgcloud__BO_API_Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>This object holds information about Business Object API Transaction Log which is a collection of one or more promotions, which should be created/updated under the same name via the Promotion BO API Creation.</description>
    <label>Business Object API Transaction Log</label>
    <nameField>
        <displayFormat>ATL-{00000000}</displayFormat>
        <label>Business Object API Transaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Object API Transaction Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>