force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Calculation_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_End_Time__c</fullName>
    <description>Timestamp when off-platform signaled that the calculation was finished (the same timestamp for all promotions of the transaction)</description>
    <label>Calculation End Time</label>
    <type>DateTime</type>
</CustomField>