force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Calculation_Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Schedule_Time__c</fullName>
    <description>Timestamp when the promotion calculation was scheduled</description>
    <label>Calculation Schedule Time</label>
    <type>DateTime</type>
</CustomField>