force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Error_Information__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Error_Information__c</fullName>
    <description>Error information</description>
    <label>Error Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>