force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Error_Type__c</fullName>
    <description>Shows the error type/phase when an error occurred</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValidationError</fullName>
            </value>
            <value>
                <fullName>TransformationError</fullName>
            </value>
            <value>
                <fullName>WriteError</fullName>
            </value>
            <value>
                <fullName>EnqueueCalculationError</fullName>
            </value>
            <value>
                <fullName>CalculationError</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>