force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Input_Json_4__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Input_Json_4__c</fullName>
    <description>Input JSON Chunk</description>
    <label>Input Json 4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>