force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Number_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_of_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Holds the number of retries that the system took to properly execute the writing of a promotion.</description>
    <label>Number of Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>