force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Output_Json_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Output_Json_3__c</fullName>
    <description>Chunk of the output JSON</description>
    <label>Output Json 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>