force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFId of the promotion that created/updated. Will be set when the promotion is created.</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Business Object API Transaction Logs</relationshipLabel>
    <relationshipName>BO_API_Transaction_Log</relationshipName>
    <type>Lookup</type>
</CustomField>