force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>