force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>ToBeCalculated</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>