force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Id__c</fullName>
    <description>Represents one transaction. In case of mass-copy/-edit, integration multiple Business Object API Transaction Logs may be executed under the same transaction.</description>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>