force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow</label>
    <referenceTo>cgcloud__BO_API_Workflow__c</referenceTo>
    <relationshipLabel>Business Object API Transaction Logs</relationshipLabel>
    <relationshipName>BO_API_Transaction_Log</relationshipName>
    <type>Lookup</type>
</CustomField>