force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/fields/cgcloud__Write_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Write_Start_Time__c</fullName>
    <description>Timestamp when the promotion save was started.</description>
    <label>Write Start Time</label>
    <type>DateTime</type>
</CustomField>