force-app/main/default/objects/cgcloud__BO_API_Transaction_Log__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Transaction_Id__c</columns>
    <columns>cgcloud__Promotion__c</columns>
    <columns>cgcloud__Workflow__c</columns>
    <columns>cgcloud__Status__c</columns>
    <columns>cgcloud__Error_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>